--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         </div>
 
     </div>
-    <audio id="success" src="/audio/Success sound effect (copyright free).mp3"></audio>
-    <audio id="faild" src="/audio/faild sound.mp3"></audio>
-    <audio id="won" src="/audio/Crowd cheering sound effect.mp3"></audio>
+    <audio id="success" src="audio/Success sound effect (copyright free).mp3"></audio>
+    <audio id="faild" src="audio/faild sound.mp3"></audio>
+    <audio id="won" src="audio/Crowd cheering sound effect.mp3"></audio>
 
 
     <script src="js/index.js"></script>
